# ontoenv_pirate

./: README.md  building.ttl  down_dict.json  no_ttl_err.json  onto_deps.py  pyproject.toml  test.py
ontologies/: 0c372234-bebd-4305-9e39-5d223c9130de.ttl  1089aaa5-7090-4066-841e-685d6470b4be.ttl  18bf0d82-d9eb-47a1-a9d2-0a9ab7aa23c3.ttl  18d2b000-b3a6-4a39-a8e3-69b372ef231c.ttl  1de04e43-afae-413e-8bea-7e935200a4ca.ttl  230fd8f4-9ba7-4985-872a-51e550165df6.ttl  2fbcdb46-347c-42ef-948e-ddb9c8316d74.ttl  450a300f-3d91-4f43-a8fa-a27cc5e6e518.ttl  483a4913-6d97-436e-8032-4667bd7e71e4.ttl  48c81f44-ac96-4121-b268-44ac0539a962.ttl  4fa0e477-9f18-4a44-9dab-296d56461def.ttl  4fe1e7fd-c100-4c46-b531-ebe25fb404f3.ttl  66e6ce37-86dc-47cd-af78-8ca6ffe9221c.ttl  6beefa84-5f4f-4cda-8c7a-54ddeedb6aff.ttl  7e1e6fe8-9f6b-4855-9683-15237a1688b1.ttl  829ab6bb-de2b-49e0-a0ca-551b8e5c794d.ttl  859adbb4-6cfe-4599-b06d-a41d65b61956.ttl  8ddc9f30-6c76-49fe-9941-73ae0d25c16d.ttl  8e55c7dc-826e-4e61-98ab-5694ca762e17.ttl  922ca107-56ef-4785-aa9f-2872a9a3b992.ttl  96527dd3-7d7a-42de-a050-eec3a200e86c.ttl  989aad06-55eb-4d66-a130-2e1252df14b0.ttl  99d8d336-9680-4fd5-9fee-5cbe00c6df71.ttl  ab056fd1-bd51-4d42-869c-33be33d29f97.ttl  aca71b93-44b7-4d24-92ec-300e2c84aac1.ttl  b312e955-218c-441d-877e-cfa5d0faae5f.ttl  b6816096-a74d-462f-9a6b-9d08e4933170.ttl  b7a08744-dff4-4a51-87d0-676bc4aea112.ttl  bb01cf32-1b42-42c4-994b-4628e2e44e8e.ttl  d9790f2a-aa86-4ce2-b0de-7411c9792d7f.ttl  errors.pkl  f3e7a62f-8305-452b-b9d6-19f4adc09bc2.ttl  f7d6e8c1-613c-44aa-84f3-f18c7e418836.ttl  ontologies.pkl  (+1 more)
(+3 files in other folders)
